--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site wide configuration
 
-title: Site Title
+title: Pablo Molina
 locale: en_US
-description: Describe your website here.
+description: Thoughts about modern web software development
 logo: site-logo.png
 search: true
-url: 
+url: https://pabli.co
 
 
 # Jekyll configuration
@@ -32,11 +32,11 @@ exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.
 
 # Site owner
 owner:
-  name: Your Name
+  name: Pablo Molina
   avatar: bio-photo.jpg
-  email: you@email.com
+  email: pablo.molinacandel@gmail.com
   disqus-shortname:
-  twitter: #username
+  twitter: lapenya
   facebook: #username
   github: #username
   stackexchange: #http://stackoverflow.com/users/123456/username
@@ -46,7 +46,7 @@ owner:
   tumblr: #username
   google:
     plus: #username
-    analytics:
+    analytics: UA-58946214-1
     verify:
     ad-client:
     ad-slot: 
