--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,14 +3,14 @@
 - title: About
   url: /about/
 
-- title: Articles
-  url: /articles/
+#- title: Articles
+#  url: /articles/
 
-- title: Blog
+- title: Articles
   url: /blog/
 
-- title: Theme Setup
-  url: /theme-setup/
+#- title: Theme Setup
+#  url: /theme-setup/
 
-- title: Made Mistakes
-  url: http://mademistakes.com
+#- title: Made Mistakes
+#  url: http://mademistakes.com
