--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Pablo Molina
 locale: en_US
-description: Thoughts about modern web software development
+description: Thoughts about modern software development
 logo: site-logo.png
 search: true
 url: https://pabli.co
